# Omega

.github/workflows/: e3sm-gh-ci-cime-tests.yml
components/eamxx/src/control/: atmosphere_driver.cpp
components/eamxx/src/share/: CMakeLists.txt
components/eamxx/src/share/atm_process/: atmosphere_process.cpp  atmosphere_process_group.cpp
components/eamxx/src/share/io/: scorpio_output.cpp
components/eamxx/src/share/property_checks/: mass_and_energy_conservation_check.hpp
components/eamxx/src/share/util/: eamxx_utils.hpp
components/mpas-albany-landice/src/: Registry.xml
components/mpas-albany-landice/src/mode_forward/: mpas_li_calving.F  mpas_li_ocean_extrap.F
components/mpas-ocean/bld/: build-namelist  build-namelist-group-list  build-namelist-section
components/mpas-ocean/bld/namelist_files/: namelist_defaults_mpaso.xml  namelist_definition_mpaso.xml
components/mpas-ocean/driver/: ocn_comp_mct.F
components/mpas-ocean/src/: Registry.xml
components/omega/configs/: Default.yml
components/omega/doc/design/: Tendencies.md
components/omega/doc/devGuide/: AuxiliaryVariables.md  Forcing.md  TendencyTerms.md  VerticalMixingCoeff.md
components/omega/doc/userGuide/: AuxiliaryVariables.md  Forcing.md  TendencyTerms.md  VerticalMixingCoeff.md
components/omega/src/infra/: OmegaKokkos.h  TimeMgr.cpp
components/omega/src/ocn/: AuxiliaryState.cpp  AuxiliaryState.h  Eos.cpp  Eos.h  Forcing.cpp  Forcing.h  HorzMesh.cpp  HorzMesh.h  HorzOperators.cpp  HorzOperators.h  HorzUtil.h  OceanFinal.cpp  OceanInit.cpp  OceanRun.cpp  OceanState.cpp  Tendencies.cpp  Tendencies.h  TendencyTerms.cpp  TendencyTerms.h  VertCoord.cpp  VertCoord.h  VertMix.cpp  VertMix.h
components/omega/src/ocn/auxiliaryVars/: MomForcingAuxVars.cpp  MomForcingAuxVars.h  SfcStressForcingAuxVars.cpp  SfcStressForcingAuxVars.h
components/omega/src/ocn/forcingVars/: SfcStressForcingVars.cpp  SfcStressForcingVars.h
components/omega/src/timeStepping/: ForwardBackwardStepper.cpp  RungeKutta2Stepper.cpp  RungeKutta4Stepper.cpp  TimeStepper.cpp
components/omega/test/: CMakeLists.txt
components/omega/test/infra/: IOStreamTest.cpp
components/omega/test/ocn/: AuxiliaryStateTest.cpp  AuxiliaryVarsTest.cpp  EosTest.cpp  ForcingTest.cpp  HorzMeshTest.cpp  HorzOperatorsTest.cpp  OceanTestCommon.h  StateTest.cpp  TendenciesTest.cpp  TendencyTermsTest.cpp  TracersTest.cpp  VertCoordTest.cpp  VertMixTest.cpp
components/omega/test/timeStepping/: TimeStepperTest.cpp
driver-moab/main/: prep_atm_mod.F90  prep_ocn_mod.F90  seq_frac_mct.F90  seq_map_mod.F90
